# lastpass-blob-deobfuscator

./: Cargo.toml  README.md
src/: lib.rs  main.rs
