[package]
name = "lastpass-blob-deobfuscator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.20.0"
hex = "0.4.3"
regex = "1.7.0"
serde = { version = "1.0.152", features = ["derive"] }
serde-xml-rs = "0.6.0"
serde_xml = "0.9.1"
